--- a/Portfolio-main/public/index.html
+++ b/Portfolio-main/public/index.html
@@ -46,7 +46,7 @@
 		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 		<link
 			rel="icon"
-			href="https://lh3.googleusercontent.com/mkjSpnWlhQ1Pwz6tHndiLw0lxDzaLzE_QRZY6T3BdKkSaHdRVzpjoBu9pCokJRDsoo7QaI1RhO8S5ckg_y_BEDJCJC3tZcqTI8gF4PUmjPwcKBqawmSfFJyGULOAqQYQF10E2BGnuDicYbP-kSt3XYR4sAwB8kSholqNcyqMc_cdZNT8o6MYKEjoTS_o-Ie6POs0VvITKYI6kv4POZ2Ccu26V_3wgUQH7fggMjMAoQzyuXO3HAazRRwfOgslRMqq7hwDOzfpRJ3UI5OfaaS8nt5hJXt-Pp14lOmthgED88xxXGcXX2yDpjxl47uLzRcOVzAkc-lhtoZSUFr6_3Cz1PCSI9azzkXuKxdWgtvmw-ElKb7lGk17MTaSGVJ1FiNbvUqfmQw6W7p8hBsw3ZMvcJiwk0aCmUOl33PETx3EqM_oBG3ORUTr_34A_PzA5QX9V55h9TF91H77YXdMbU59grgg8UTcTGWIpb82Y1CoanPixIiPGSzYCH_TjVpU0vhUVMy3jnHp93RWDLEuFeUiG2KRahgiIbdmpDw62vCVXJZYi6NNd54QG5Eelvzqdoo6OonDWE5Mkh5sB7MxpBip217_HQEKKJ2oXzel6_vodWGNFAI0VKzVeC0HW4HcfgOQ9YHvSQZv6wQfkD6W2fIVg6wUtXKXpAeCM9C0_ZjlaYNRNWQ2ixnavTGFSUh4MMyYDZGGAAOqEZrIAfbYISxBRxCVWiARh__3hCUDBJA2F9aCrTopJS5aPc3XuL77NRHNg7aGsdEtCJQYec9BcwljzIG7F5Lk5uCDxocTUQ=s400-no?authuser=0"
+			href="https://drive.google.com/file/d/1W_pHSu348E8v8ddluvFQ-uACReThUqlt/view?usp=drivesdk"
 		/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
@@ -61,7 +61,7 @@
 		/>
 		<link
 			rel="icon"
-			href="https://lh3.googleusercontent.com/mkjSpnWlhQ1Pwz6tHndiLw0lxDzaLzE_QRZY6T3BdKkSaHdRVzpjoBu9pCokJRDsoo7QaI1RhO8S5ckg_y_BEDJCJC3tZcqTI8gF4PUmjPwcKBqawmSfFJyGULOAqQYQF10E2BGnuDicYbP-kSt3XYR4sAwB8kSholqNcyqMc_cdZNT8o6MYKEjoTS_o-Ie6POs0VvITKYI6kv4POZ2Ccu26V_3wgUQH7fggMjMAoQzyuXO3HAazRRwfOgslRMqq7hwDOzfpRJ3UI5OfaaS8nt5hJXt-Pp14lOmthgED88xxXGcXX2yDpjxl47uLzRcOVzAkc-lhtoZSUFr6_3Cz1PCSI9azzkXuKxdWgtvmw-ElKb7lGk17MTaSGVJ1FiNbvUqfmQw6W7p8hBsw3ZMvcJiwk0aCmUOl33PETx3EqM_oBG3ORUTr_34A_PzA5QX9V55h9TF91H77YXdMbU59grgg8UTcTGWIpb82Y1CoanPixIiPGSzYCH_TjVpU0vhUVMy3jnHp93RWDLEuFeUiG2KRahgiIbdmpDw62vCVXJZYi6NNd54QG5Eelvzqdoo6OonDWE5Mkh5sB7MxpBip217_HQEKKJ2oXzel6_vodWGNFAI0VKzVeC0HW4HcfgOQ9YHvSQZv6wQfkD6W2fIVg6wUtXKXpAeCM9C0_ZjlaYNRNWQ2ixnavTGFSUh4MMyYDZGGAAOqEZrIAfbYISxBRxCVWiARh__3hCUDBJA2F9aCrTopJS5aPc3XuL77NRHNg7aGsdEtCJQYec9BcwljzIG7F5Lk5uCDxocTUQ=s400-no?authuser=0
+			href="https://drive.google.com/file/d/1W_pHSu348E8v8ddluvFQ-uACReThUqlt/view?usp=drivesdk
 			"
 			type="image/icon type"
 		/> 
@@ -83,7 +83,7 @@
 		 <!-- profile pic -->
 		<link
 			rel="preload"
-			href="https://lh3.googleusercontent.com/mkjSpnWlhQ1Pwz6tHndiLw0lxDzaLzE_QRZY6T3BdKkSaHdRVzpjoBu9pCokJRDsoo7QaI1RhO8S5ckg_y_BEDJCJC3tZcqTI8gF4PUmjPwcKBqawmSfFJyGULOAqQYQF10E2BGnuDicYbP-kSt3XYR4sAwB8kSholqNcyqMc_cdZNT8o6MYKEjoTS_o-Ie6POs0VvITKYI6kv4POZ2Ccu26V_3wgUQH7fggMjMAoQzyuXO3HAazRRwfOgslRMqq7hwDOzfpRJ3UI5OfaaS8nt5hJXt-Pp14lOmthgED88xxXGcXX2yDpjxl47uLzRcOVzAkc-lhtoZSUFr6_3Cz1PCSI9azzkXuKxdWgtvmw-ElKb7lGk17MTaSGVJ1FiNbvUqfmQw6W7p8hBsw3ZMvcJiwk0aCmUOl33PETx3EqM_oBG3ORUTr_34A_PzA5QX9V55h9TF91H77YXdMbU59grgg8UTcTGWIpb82Y1CoanPixIiPGSzYCH_TjVpU0vhUVMy3jnHp93RWDLEuFeUiG2KRahgiIbdmpDw62vCVXJZYi6NNd54QG5Eelvzqdoo6OonDWE5Mkh5sB7MxpBip217_HQEKKJ2oXzel6_vodWGNFAI0VKzVeC0HW4HcfgOQ9YHvSQZv6wQfkD6W2fIVg6wUtXKXpAeCM9C0_ZjlaYNRNWQ2ixnavTGFSUh4MMyYDZGGAAOqEZrIAfbYISxBRxCVWiARh__3hCUDBJA2F9aCrTopJS5aPc3XuL77NRHNg7aGsdEtCJQYec9BcwljzIG7F5Lk5uCDxocTUQ=s400-no?authuser=0
+			href="https://drive.google.com/file/d/1W_pHSu348E8v8ddluvFQ-uACReThUqlt/view?usp=drivesdk
 			"
 			as="image"
 		/>
