--- a/Portfolio-main/public/index.html
+++ b/Portfolio-main/public/index.html
@@ -46,7 +46,7 @@
 		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 		<link
 			rel="icon"
-			href="https://drive.google.com/file/d/1W_pHSu348E8v8ddluvFQ-uACReThUqlt/view?usp=drivesdk"
+			href="https://github.com/abhi72181/portfolio/blob/main/latestpic1.jpg?raw=true"
 		/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
@@ -61,7 +61,7 @@
 		/>
 		<link
 			rel="icon"
-			href="https://drive.google.com/file/d/1W_pHSu348E8v8ddluvFQ-uACReThUqlt/view?usp=drivesdk
+			href="https://github.com/abhi72181/portfolio/blob/main/latestpic1.jpg?raw=true
 			"
 			type="image/icon type"
 		/> 
@@ -83,7 +83,7 @@
 		 <!-- profile pic -->
 		<link
 			rel="preload"
-			href="https://drive.google.com/file/d/1W_pHSu348E8v8ddluvFQ-uACReThUqlt/view?usp=drivesdk
+			href="https://github.com/abhi72181/portfolio/blob/main/latestpic1.jpg?raw=true
 			"
 			as="image"
 		/>
