--- a/Portfolio-main/public/index.html
+++ b/Portfolio-main/public/index.html
@@ -10,14 +10,14 @@
 		<meta
 			data-react-helmet="true"
 			property="og:url"
-			 content="https://portfolio-babli.vercel.app/"  
+			 content="https://portfolios-kohl.vercel.app/"  
 		/> 
 		<!-- It should be deployed link -->
-		<meta name="author" content="Babli Kumari" />
+		<meta name="author" content="Abhishek Pandey" />
 		<meta
 			data-react-helmet="true"
 			name="twitter:creator"
-			content="anandbabli96@gmail.com"
+			content="abhihits0404@gmail.com"
 		/>
 		<!-- <meta
 			data-react-helmet="true"
@@ -27,7 +27,7 @@
 		<meta
 			data-react-helmet="true"
 			name="twitter:description"
-			content="Hi, I am babli, I build things for web."
+			content="Hi, I am Abhishek Pandey, I build things for web."
 		/>
 		<script
 			src="https://kit.fontawesome.com/249783f98b.js"
