--- a/Portfolio-main/public/index.html
+++ b/Portfolio-main/public/index.html
@@ -10,7 +10,7 @@
 		<meta
 			data-react-helmet="true"
 			property="og:url"
-			 content="https://portfolios-kohl.vercel.app/"  
+			 content="https://portfolioses.vercel.app/"  
 		/> 
 		<!-- It should be deployed link -->
 		<meta name="author" content="Abhishek Pandey" />
@@ -76,7 +76,7 @@
 		<link
 			rel="apple-touch-icon-precomposed"
 			type="image/x-icon"
-			href="https://raw.githubusercontent.com/surajahirwar/surajahirwar/main/20220306_210819dssd-removebg-preview-removebg-preview-modified.png
+			href="https://github.com/abhi72181/portfolio/blob/main/latestpic1.jpg?raw=true
 			"
 			sizes="72x72"
 		/>
